Fix TLS error when searching for new version